apps/local/dhd-cloud/backend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dhd-cloud-backend
spec:
  template:
    spec:
      containers:
        - name: backend
          imagePullPolicy: Always
