apps/local/dhd-cloud/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dhd-cloud
  namespace: dhd-cloud
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: dhd-cloud
          volumeMounts:
            - name: private-key
              mountPath: /etc/keys/private
              readOnly: true
            - name: public-key
              mountPath: /etc/keys/public
              readOnly: true
      volumes:
        - name: private-key
          secret:
            secretName: dhd-cloud-private-key
            defaultMode: 0400
        - name: public-key
          configMap:
            name: dhd-cloud-public-key
            defaultMode: 0444
