apps/local/dhd-cloud/frontend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dhd-cloud-frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          imagePullPolicy: Always
